<resources>
    <string name="app_name">Calculator</string>
    <string name="Addition">+</string>
    <string name="Equals">=</string>
    <string name="Minus">-</string>
    <string name="Answer">TextView</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
    <string name="_5">5</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="number">Number</string>
    <string name="textview2">TextView</string>
    <string name="Clear">C</string>
    <string name="Divide">/</string>
    <string name="Multiply">*</string>
    <string name="BracketL">(</string>
    <string name="BracketR">)</string>
    <string name="del">Del</string>
    <string name="Dot">.</string>
</resources>
